demos/05-services-and-networking/02-nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress
#
# Example: Expose a deployment as a service
# kubectl expose deployment nginx-ingress-controller --port=80 --target-port=80 --name=nginx-ingress-service --type=NodePort
